--- a/_config.yml
+++ b/_config.yml
@@ -7,12 +7,10 @@ safe: false
 
 ### site serving configuration ###
 exclude: [CNAME, README.md, .gitignore]
-permalink: / ## disables post output
+permalink: /:title ## disables post output
 timezone: null
 lsi: false
 markdown: kramdown
-highlighter: rouge
-
 
 ### content configuration ###
 title:       "vcdMaker Home Page"
@@ -33,4 +31,8 @@ colors:
   purple:    '#c869bf'
   orange:    '#fab125'
   turquoise: '#0fbfcf'
+  
+
+kramdown:
+  auto_ids:  false
   
