--- a/_config.yml
+++ b/_config.yml
@@ -12,13 +12,14 @@ timezone: null
 lsi: false
 markdown: kramdown
 
+
 ### content configuration ###
 title:       "vcdMaker Home Page"
 keywords:    "vcdMaker, vcd, variable change dump, log, debug trace, debugging, embedded"
 description: "vcdMaker Home Page"
-source_link: "https://github.com/WojciechRynczuk/Exp0"
-favicon:     #put a path like: "img/favicon.ico"
-touch_icon:  #put a path like: "img/apple-touch-icon.png"
+source_link: "https://github.com/t413/SinglePaged"
+favicon:     "img/favicon.ico"
+touch_icon:  "img/apple-touch-icon.png"
 google_analytics_key: ## put YOUR key here to enable tracking! (blank to disable)
 
 
@@ -31,8 +32,7 @@ colors:
   purple:    '#c869bf'
   orange:    '#fab125'
   turquoise: '#0fbfcf'
-  
 
 kramdown:
   auto_ids:  false
-  
+
