--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: "vcdMaker Home Page"
 source_link: "https://github.com/t413/SinglePaged"
 favicon:     "img/Electronics-48.png"
 touch_icon:  "img/Electronics-48.png"
-google_analytics_key: ## put YOUR key here to enable tracking! (blank to disable)
+google_analytics_key: UA-73621336-1
 
 
 ### template colors, used site-wide via css ###
